# rustsql

./: .gitignore  build.bat  run.bat
database/: Cargo.toml  config.toml
database/src/: base.rs  lib.rs  tests.rs
server/: .env  Cargo.toml  build  build.rs  config.toml  test.env  upload
server/lib/: lib_db.rlib
server/src/: main.rs
server/src/controller/: account.rs  mod.rs  user.rs
server/src/controller/tables/: mod.rs  sys_wexin_user_code.rs  traits.rs
server/src/page/: index.rs
