[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }

[lib]
name = "_db"
crate-type = ["rlib"]