[package]
name = "web_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
local_ipaddress = "0.1.3"
lazy_static = "1.4.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "mysql" ] }
dotenv = "*"

serde="*"
serde_json = "1.0"
tokio = "*"
chrono = "0.4"
database = { path = "../database" }
#links = "lib_db"